프로젝트 리워드 api 연동

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="project_details_title">[전지적 매니저 시점] 운전자의 목을 지켜주는 차량용 목베게</string>
     <string name="project_details_info_text">운전 시 가장 위험에 노출되어 있는 목! 전지적 매니저의 시점으로, 세상 모든 운전자들의 건강과 휴식, 안전을 위해 제대로 만든 차량용 목베게 </string>
     <string name="more_info_foot">6.10.0  \n라이프 스타일 투자플랫폼  \nWADIZ Platform Co.,Ltd</string>
+    <string name="project_details_reward_info">아이돈 케어 마스크(Second Skin) 3개 + 2개월(60일 사용) 리필필터 3팩(15EA)(개당 29,666원)</string>
 
 </resources>
 
