--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,10 @@
     <string name="project_details_info_text">운전 시 가장 위험에 노출되어 있는 목! 전지적 매니저의 시점으로, 세상 모든 운전자들의 건강과 휴식, 안전을 위해 제대로 만든 차량용 목베게 </string>
     <string name="more_info_foot">6.10.0  \n라이프 스타일 투자플랫폼  \nWADIZ Platform Co.,Ltd</string>
     <string name="project_details_reward_info">아이돈 케어 마스크(Second Skin) 3개 + 2개월(60일 사용) 리필필터 3팩(15EA)(개당 29,666원)</string>
+    <string name="project_details_fund_guide_main">이 프로젝트의 위험요인 및 정책을 반드시\n확인하세요.</string>
+    <string name="fund_guide_details1">펀딩 받은 후, 리워드를 제작할 수 있는 크라우드 펀딩의 특성과 생산 과정에서의 예상치 못한 상황으로 인하여 리워드 발송이 지연되거나 발송이 불가할 수 있습니다.</string>
+    <string name="fund_guide_details2">와디즈에서 펀딩하는 방법이 궁금하다면?</string>
+    <string name="fund_policy_notice"><b>"잠깐!"</b> 결제하기가 아닌 펀딩하기인 이유를 확인하고, 펀딩하세요.</string>
 
 </resources>
 
